--- a/main.css
+++ b/main.css
@@ -13,15 +13,20 @@ header, section, footer, aside, nav, article, hgroup {
 }
 body{
     width:100%;
+    height: 100%;
     display:-webkit-box;
     -webkit-box-pack: center;
     background-image: url("image.JPG");
     background-position: center center;
+    background-repeat: no-repeat;
     background-size: cover;
    min-height: 100%;
 }
 #big_wrapper{
-    max-width: 1000px;
+    width:100vw;
+    height: 100vh;
+    min-width: 1000px;
+    min-height: 1000px;
     margin: 20px 0px;
     display:-webkit-box;
     -webkit-box-orient: vertical;
@@ -35,7 +40,7 @@ body{
 
 }
 #firstword{
-    font: bold 30px Century Gothic;
+    font: bold 50px Arial black;
     text-shadow: rgb(110,110,110) 3px 3px 5px;
 }
 #top_menu{
@@ -57,6 +62,16 @@ body{
     -webkit-box-flex: 1;
     margin: 20px;
     padding: 20px;
+}
+#article{
+    border: 2px solid black;
+    background: #116466;
+    padding: 20px;
+    margin: 10px;
+    -webkit-border-radius: 25px;
+    -webkit-box-shadow: rgb(110,110,110, .6) 5px 5px 5px;
+    -webkit-transition: opacity 2s, background 2s, width 2s, height 2s;
+    
 }
 #side_news{
     border: 1px solid brown;
@@ -81,96 +96,25 @@ body{
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
 }
-#home{
+#button{
+    background-color: #116466;
     border: 2px solid black;
-    background: #116466;
+    color:black;
     padding: 20px;
     margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 20px bold Tahoma;
+    cursor: pointer;
     -webkit-border-radius: 25px;
     -webkit-box-shadow: rgb(110,110,110, .6) 5px 5px 5px;
-    -webkit-transition: -webkit-transform 2s, opacity 2s, background 2s, width 2s, height 2s;
-    
+    -webkit-transition: opacity 2s, background 2s, width 2s, height 2s;
 }
-#home:hover{
-    -webkit-transform: rotate(360deg);
+
+#button:hover{
     opacity: 1;
     background: #1ec7e6;
-    width: 40px;
-    height: 20px;
-}
-
-
-#about{
-    border: 2px solid black;
-    background:#116466;
-    padding: 20px;
-    margin: 10px;
-    -webkit-border-radius: 25px;
-    -webkit-box-shadow: rgb(110,110,110, .6) 5px 5px 5px;
-    -webkit-transition: -webkit-transform 2s, opacity 2s, background 2s, width 2s, height 2s;
-    
-}
-#about:hover{
-    -webkit-transform: rotate(360deg);
-    opacity: 1;
-    background: #1ec7e6;
-    width: 50px;
-    height: 20px;
-}
-
-
-#tutorials{
-    border: 2px solid black;
-    background: #116466;
-    padding: 20px;
-    margin: 10px;
-    -webkit-border-radius: 25px;
-    -webkit-box-shadow: rgb(110,110,110, .6) 5px 5px 5px;
-    -webkit-transition: -webkit-transform 2s, opacity 2s, background 2s, width 2s, height 2s;
-    
-}
-#tutorials:hover{
-    -webkit-transform: rotate(360deg);
-    opacity: 1;
-    background: #1ec7e6;
-    width: 90px;
-    height: 20px;
-}
-
-
-#projects{
-    border: 2px solid black;
-    background: #116466;
-    padding: 20px;
-    margin: 10px;
-    -webkit-border-radius: 25px;
-    -webkit-box-shadow: rgb(110,110,110, .6) 5px 5px 5px;
-    -webkit-transition: -webkit-transform 2s, opacity 2s, background 2s, width 2s, height 2s;
-    
-}
-#projects:hover{
-    -webkit-transform: rotate(360deg);
-    opacity: 1;
-    background: #1ec7e6;
-    width: 90px;
-    height: 20px;
-}
-
-
-#contact{
-    border: 2px solid black;
-    background: #116466;
-    padding: 20px;
-    margin: 10px;
-    -webkit-border-radius: 25px;
-    -webkit-box-shadow: rgb(110,110,110, .6 ) 5px 5px 5px;
-    -webkit-transition: -webkit-transform 2s, opacity 2s, background 2s, width 2s, height 2s;
-    
-}
-#contact:hover{
-    -webkit-transform: rotate(360deg);
-    opacity: 1;
-    background: #1ec7e6;
-    width: 80px;
-    height: 20px;
+    width: 100px;
+    height: 30px;
 }
